@@ -7,6 +7,7 @@ CHANGELOG
 * Add `Result`
 * Moved `Maybe` to `net.kemitix.mon.maybe.Maybe`
 * Add `Maybe.stream()`
+* Deprecate `Maybe.fromOptional(Optional)`
 
 0.6.0
 -----
